Revert "김팀장님 지도하에 업데이트"
This reverts commit 280794bc06c68fb3148df8c430e57ccf12059a84.

--- a/css/main.css
+++ b/css/main.css
@@ -310,13 +310,11 @@ img{
 }
 /* 링크 트랜지션 */
 .gnb a{
-    display: inline-block;
-    transition: .3s;
+    transition: color .3s;
 }
 /* 마우스 오버시 글자색 */
 .gnb a:hover{
-    color: #00f;
-    transform: scale(2);
+    color: #f00;
 }
 
 /* 2. 메인영역 */
